# remoteplay

./: .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  start-gameserver.ps1  start-gameserver.sh  wix.json  wix.jxon
.github/workflows/: create-executable.yml  python-app.yml
images/: Applications  DS_Store  remoteplay.icns
remoteplay/: remoteplay.py
src/: remoteplay-runner.py  thread-test.py
src/remoteplay/: __init__.py  __main__.py  common.py  paperspace.py  remoteplay.py  sshtunnel.py  usbserver.py  worker.py
tests/: test_common.py  test_remoteplay.py
